bench/tests/query_results/snapshots/r#mod__query_results__bsbm__Business Intelligence Q6 (String).snap
---
source: bench/tests/query_results/bsbm.rs
expression: "run_select_query(&store, &query_str).await"
---
{
  "head": {
    "vars": [
      "reviewer",
      "reviewerAvgScore"
    ]
  },
  "results": {
    "bindings": [
      {
        "reviewer": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromRatingSite1/Reviewer106"
        },
        "reviewerAvgScore": {
          "type": "literal",
          "value": "9.333333",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "reviewer": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromRatingSite1/Reviewer128"
        },
        "reviewerAvgScore": {
          "type": "literal",
          "value": "9",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "reviewer": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromRatingSite1/Reviewer151"
        },
        "reviewerAvgScore": {
          "type": "literal",
          "value": "9.333333",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "reviewer": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromRatingSite1/Reviewer155"
        },
        "reviewerAvgScore": {
          "type": "literal",
          "value": "8.666667",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "reviewer": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromRatingSite1/Reviewer199"
        },
        "reviewerAvgScore": {
          "type": "literal",
          "value": "8.666667",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "reviewer": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromRatingSite1/Reviewer252"
        },
        "reviewerAvgScore": {
          "type": "literal",
          "value": "10",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "reviewer": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromRatingSite1/Reviewer280"
        },
        "reviewerAvgScore": {
          "type": "literal",
          "value": "8.5",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "reviewer": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromRatingSite1/Reviewer291"
        },
        "reviewerAvgScore": {
          "type": "literal",
          "value": "9",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "reviewer": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromRatingSite1/Reviewer371"
        },
        "reviewerAvgScore": {
          "type": "literal",
          "value": "9",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "reviewer": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromRatingSite1/Reviewer439"
        },
        "reviewerAvgScore": {
          "type": "literal",
          "value": "8.666667",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "reviewer": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromRatingSite1/Reviewer64"
        },
        "reviewerAvgScore": {
          "type": "literal",
          "value": "9.5",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "reviewer": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromRatingSite1/Reviewer85"
        },
        "reviewerAvgScore": {
          "type": "literal",
          "value": "10",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      }
    ]
  }
}
