bench/tests/query_results/snapshots/r#mod__query_results__bsbm__Business Intelligence Q8 (ObjectId).snap
---
source: bench/tests/query_results/bsbm.rs
expression: "run_select_query(&store, &query_str).await"
---
{
  "head": {
    "vars": [
      "vendor",
      "cheapExpensiveRatio"
    ]
  },
  "results": {
    "bindings": [
      {
        "vendor": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor8/Vendor8"
        },
        "cheapExpensiveRatio": {
          "type": "literal",
          "value": "0.54545456",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "vendor": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor2/Vendor2"
        },
        "cheapExpensiveRatio": {
          "type": "literal",
          "value": "0.53154874",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "vendor": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor3/Vendor3"
        },
        "cheapExpensiveRatio": {
          "type": "literal",
          "value": "0.5194805",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "vendor": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor9/Vendor9"
        },
        "cheapExpensiveRatio": {
          "type": "literal",
          "value": "0.4985507",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "vendor": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor7/Vendor7"
        },
        "cheapExpensiveRatio": {
          "type": "literal",
          "value": "0.49832216",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "vendor": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor11/Vendor11"
        },
        "cheapExpensiveRatio": {
          "type": "literal",
          "value": "0.49488753",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "vendor": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor10/Vendor10"
        },
        "cheapExpensiveRatio": {
          "type": "literal",
          "value": "0.49137932",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "vendor": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor5/Vendor5"
        },
        "cheapExpensiveRatio": {
          "type": "literal",
          "value": "0.4882353",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "vendor": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor1/Vendor1"
        },
        "cheapExpensiveRatio": {
          "type": "literal",
          "value": "0.48214287",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      },
      {
        "vendor": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor6/Vendor6"
        },
        "cheapExpensiveRatio": {
          "type": "literal",
          "value": "0.4814815",
          "datatype": "http://www.w3.org/2001/XMLSchema#float"
        }
      }
    ]
  }
}
