bench/tests/query_results/snapshots/r#mod__query_results__bsbm__Explore Q10 (PlainTerm).snap
---
source: bench/tests/query_results/bsbm.rs
expression: "if name == \"explore-q9\" || name == \"explore-q12\"\n{ run_graph_result_query(&store, &query_str).await } else\n{ run_select_query(&store, &query_str).await }"
---
{
  "head": {
    "vars": [
      "offer",
      "price"
    ]
  },
  "results": {
    "bindings": [
      {
        "offer": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor7/Offer12927"
        },
        "price": {
          "type": "literal",
          "value": "3271.15",
          "datatype": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/USD"
        }
      },
      {
        "offer": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor7/Offer12345"
        },
        "price": {
          "type": "literal",
          "value": "3432.61",
          "datatype": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/USD"
        }
      },
      {
        "offer": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor2/Offer4263"
        },
        "price": {
          "type": "literal",
          "value": "4515.96",
          "datatype": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/USD"
        }
      }
    ]
  }
}
