bench/tests/query_results/snapshots/r#mod__query_results__bsbm__Explore Q10 (String).snap
---
source: bench/tests/query_results/bsbm.rs
expression: "run_select_query(&store, include_str!(\"./queries/explore-q10.sparql\")).await"
---
{
  "head": {
    "vars": [
      "offer",
      "price"
    ]
  },
  "results": {
    "bindings": [
      {
        "offer": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor7/Offer12927"
        },
        "price": {
          "datatype": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/USD",
          "type": "literal",
          "value": "3271.15"
        }
      },
      {
        "offer": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor7/Offer12345"
        },
        "price": {
          "datatype": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/USD",
          "type": "literal",
          "value": "3432.61"
        }
      },
      {
        "offer": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor2/Offer4263"
        },
        "price": {
          "datatype": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/USD",
          "type": "literal",
          "value": "4515.96"
        }
      }
    ]
  }
}
