bench/tests/query_results/snapshots/r#mod__query_results__bsbm__Explore Q11 (ObjectId).snap
---
source: bench/tests/query_results/bsbm.rs
expression: "if name == \"explore-q9\" || name == \"explore-q12\"\n{ run_graph_result_query(&store, &query_str).await } else\n{ run_select_query(&store, &query_str).await }"
---
{
  "head": {
    "vars": [
      "property",
      "hasValue",
      "isValueOf"
    ]
  },
  "results": {
    "bindings": [
      {
        "property": {
          "type": "uri",
          "value": "http://purl.org/dc/elements/1.1/date"
        },
        "hasValue": {
          "type": "literal",
          "value": "2008-05-25",
          "datatype": "http://www.w3.org/2001/XMLSchema#date"
        }
      },
      {
        "property": {
          "type": "uri",
          "value": "http://purl.org/dc/elements/1.1/publisher"
        },
        "hasValue": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor1/Vendor1"
        }
      },
      {
        "property": {
          "type": "uri",
          "value": "http://www.w3.org/1999/02/22-rdf-syntax-ns#type"
        },
        "hasValue": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/Offer"
        }
      },
      {
        "property": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/deliveryDays"
        },
        "hasValue": {
          "type": "literal",
          "value": "4",
          "datatype": "http://www.w3.org/2001/XMLSchema#integer"
        }
      },
      {
        "property": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/offerWebpage"
        },
        "hasValue": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor1/Offer1250/"
        }
      },
      {
        "property": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/price"
        },
        "hasValue": {
          "type": "literal",
          "value": "7956.65",
          "datatype": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/USD"
        }
      },
      {
        "property": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/product"
        },
        "hasValue": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromProducer10/Product463"
        }
      },
      {
        "property": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/validFrom"
        },
        "hasValue": {
          "type": "literal",
          "value": "2008-03-17T00:00:00",
          "datatype": "http://www.w3.org/2001/XMLSchema#dateTime"
        }
      },
      {
        "property": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/validTo"
        },
        "hasValue": {
          "type": "literal",
          "value": "2008-07-18T00:00:00",
          "datatype": "http://www.w3.org/2001/XMLSchema#dateTime"
        }
      },
      {
        "property": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/vocabulary/vendor"
        },
        "hasValue": {
          "type": "uri",
          "value": "http://www4.wiwiss.fu-berlin.de/bizer/bsbm/v01/instances/dataFromVendor1/Vendor1"
        }
      }
    ]
  }
}
